join folio data between sources

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "browser": "webkit",
-    "headless": false,
+    "headless": true,
     "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36",
     "viewport": {
         "width": 1920,
