--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Personal Information
 secret.*
 local.*
 *.DS_Store
+# Google API
+token.json
+credentials.json
+
+
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
