--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ playwright
 playwright_stealth
 pyotp
 vipaccess
+jinja2
+plotly
+kaleido
+weasyprint
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
